public/stylesheets/style.sass
body
  display: flex
  height: 100vh
  background: #f1f2f6

nav
  margin-top: 16px

nav ul li
  margin-left: 8px

nav.main-nav
  margin: 0
  min-width: 225px
  border-right: 1px solid #e9eaeb
  background: #fff


nav.main-nav .logo
  text-align: center
  padding: 12px 0
  display: flex
  align-items: center
  justify-content: center
  padding: 20px 0

nav.main-nav li
  margin: 8px

nav.main-nav li a
  padding: 8px
  border-radius: 4px
  width: 100%
  display: flex
  align-items: center
  color: #777

nav.main-nav li.is-active a
  background: #e0ecfe
  color: #3273dc

nav.main-nav li svg
  margin-right: 8px
  color: currentColor
  width: 18px

table.table td,
table.table th
  vertical-align: middle

table.table td
  border-color: #e9eaeb

.box
  box-shadow: none
  border: 1px solid #e9eaeb

.main-section
  flex: 1
  overflow-y: auto
  padding-top: 2rem
  margin: 16px 0

.terminal
  background: #222
  font-family: 'Fira Code', Menlo, monospace
  color: #fff
  height: 15rem
  overflow: auto
  font-size: 16px

details summary
  font-weight: bold
  display: flex
  align-items: center

details[open] summary
  margin-bottom: 1rem

.build-terminal-complete
  background: #e8f5e9
  border-color: #66bb6a
  box-shadow: 0 0 0 1px #66bb6a
  color: #1a651d
        

